2003-02-28  Bradley Bell  <btb@icculus.org>

	* main/player.h: whitespace

	* main/automap.c, main/cntrlcen.c, main/collide.c,
	main/gamerend.c: use Builtin_mission_num instead of 0 (if
	descent.hog is present, d1 becomes mission 0)

	* configure.ac, arch/win32/Makefile.am, arch/win32/ipx_drv.h,
	arch/win32/ipx_win.c, arch/win32/mingw_init.c,
	arch/win32/winnet.c: MinGW compiles with network enabled again,
	but still doesn't work

	* NEWS: Updated

2003-02-28  Bradley Bell  <btb@icculus.org>

	* 2d/pcx.c, arch/ogl/gr.c, libmve/mveplay.c, main/gameseq.c,
	main/inferno.c, main/menu.c, main/movie.c, main/newmenu.c: Fixed
	many opengl glitches

2003-02-27  Bradley Bell  <btb@icculus.org>

	* main/Makefile.am, main/gamesave.c, main/hoard.c, main/hoard.h,
	main/inferno.c, main/menu.c, main/mission.c, main/mission.h,
	main/network.c, main/network.h: noted that hoard.ham is only needed
	for multiplayer HOARD games, and should not be equated with
	"vertigo". put HoardEquipped() back in network.c.

	* arch/ggi/key.c, arch/sdl/key.c, arch/svgalib/key.c,
	include/d_delay.h, main/automap.c, main/game.c, main/kconfig.c,
	main/multi.c, main/newdemo.c, misc/Makefile.am, misc/d_delay.c:
	use timer_delay instead of d_delay

2003-02-27  Martin Schaffner <maschaffner@gmx.ch>

	* main/render.c: added replacement qsort for solaris

2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/gamemine.c: texture conversion for d1 shareware

2003-02-26  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c: better texture conversion for d1 levels

2003-02-26  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/kconfig.c: fix joystick support under MinGW

2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/playsave.c: fix swapping glitch

	* configure.ac, readme.txt: clean stuff up, getting ready for
	0.2.0 release

	* main/titles.c: begin support for rendering spinning robots in
	briefings

	* main/mission.c, main/mission.h: load d1 oem mission, d1 v1.0
	mission
